# tg-migrate

./: .gitignore  README.md  pyproject.toml
dev_logs/: install.txt  migrate.yaml  tg_migrate.db
tests/: test_edge_cases.py
tg_migrate/: __init__.py  __main__.py  cli.py  config.py  cutover.py  db.py  healthcheck.py  redirect.py  reporter.py  tracker.py
